vlib/v/checker/tests/unimplemented_interface_f.out
vlib/v/checker/tests/unimplemented_interface_f.v:11:13: error: `Cat` incorrectly implements method `speak`
    9 | fn main() {
   10 |     mut animals := []Animal{}
   11 |     animals << Cat{}
      |                ~~~~~
   12 | }
