vlib/v/checker/tests/unimplemented_interface_f.vv
interface Animal {
	speak(s string)
}

struct Cat {}

fn (_ Cat) speak() {}

fn main() {
	mut animals := []Animal{}
	animals << Cat{}
}
